# goXdagWallet

./: .gitignore  CMakeLists.txt  LICENSE  README.md  callback.c  callback.h  config.go  go.mod  logon_win.go  main.go  resource.go  wallet-config.json
clib/: .gitignore  CMakeLists.txt  xdag_runtime.cpp  xdag_runtime.h
clib/xDagWallet/src/client/: address.c  address.h  block.c  cli.c  cli.h  client.c  client.h  common.c  common.h  crypt.c  crypt.h  dnet_crypt.c  dnet_crypt.h  errno.h  hash.c  sha256.c  state.h  storage.c  system.h  terminal.c  terminal.h  version.h  wallet.c  wallet.h  xdag_wrapper.c
clib/xDagWallet/src/client/utils/: log.c  utils.c  utils.h
clib/xDagWallet/src/dus/: crc.h  dfslib_crypt.h  dfslib_string.c  dfsrsa.c  dfsrsa.h
clib/xDagWallet/src/mac/xDagWallet.xcodeproj/xcshareddata/xcschemes/: xDagWallet.xcscheme
clib/xDagWallet/src/win/: winsockx.h  wintime.h
components/: account.go  callback.c  callback.h  history.go  logon_win.go  passwordDialog.go  settings.go  transfer.go  wallect_cgo.go
data/: en-US.json  zh-CN.json
rpc_server/: go.mod  main.go
src/: xdag_runtime.cpp  xdag_runtime.h
wallet/: go.mod  go.sum  main.go  wallet-config.json
wallet/cli/: cli.go  file.go  password.go  run.go
wallet/components/: about.go  account.go  bip_page.go  callback.c  callback.h  donate.go  global.go  history.go  logon_win.go  numerical_entry.go  resource.go  rpc.go  settings.go  splash.go  transfer.go  wallect_cgo.go  wallet_cgo.go  wallet_test.go  wallet_win.go
wallet/config/: config.go
wallet/data/: en-US.json  fr-FR.json  it-IT.json  ru-RU.json  sp-SP.json  zh-CN.json
wallet/fileutils/: mkdir_unix.go  mkdir_windows.go
wallet/i18n/: i18n.go
wallet/server/: import_wallet.go  server.go
wallet/xdago/base58/: base58_test.go  base58bench_test.go  base58check.go  base58check_test.go  example_test.go
wallet/xdago/common/: constant.go
wallet/xdago/cryptography/: aes.go  base64.go  bcrypt.go  dnet_keys.go  ecdsa.go  ecdsa_test.go  hash.go
wallet/xdago/secp256k1/: example_test.go  genprecomps.go
wallet/xdago/utils/: basic.go  block.go  block_test.go  bytes.go  simple_codec.go  storage.go  time.go
wallet/xdago/wallet/: wallet.go  wallet_test.go
wallet/xlog/: xlogger.go
wallet_state/: wallet_state.go
xDagWallet/: .gitignore  LICENSE  README.md
xDagWallet/src/client/: block.h  client.c  client.h  commands.c  commands.h  common.c  common.h  crypt.c  dnet_crypt.c  dnet_crypt.h  events.h  hash.h  sha256.h  storage.c  storage.h  system.h  types.h  wallet.h  xdag_wrapper.h
xDagWallet/src/dus/: crc_c.c  dfslib_crypt.c  dfslib_random.c  dfslib_random.h  dfslib_string.h  (+1 more)
xlog/: stdxlog.go  xlogger_test.go
(+11 files in other folders)
